2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Implementing the channel list dialog.
	Changed to stop printing names when the client joined a channel.

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Changed the url regex to allow IDNs.

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Implemented log transcripts.

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Changed to add self and peer to the member list in a talk.

2007-11-13  Satoshi Nakagawa <artension@gmail.com>

	Enabled ruby thread hooks.

2007-11-10  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, SACrashReporter should make the directory if it doesn't exist.

2007-11-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, SACrashReporter crashes when Library/CrashReporter directory doesn't exist.

2007-11-05  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, exceptions from Socket.getaddrinfo should be caught.

2007-11-04  Satoshi Nakagawa <artension@gmail.com>

	Updated SACrashReporter.

2007-11-04  Satoshi Nakagawa <artension@gmail.com>

	Updated and enabled SACrashReporter.
	Thanks to Eloy Duran.

2007-11-01  Satoshi Nakagawa <artension@gmail.com>

	Trying to integrate SACrashReporter.
	Thanks to Eloy Duran.

2007-11-01  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, data source of OutlineView should return kind of NSObject.

2007-10-31  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, double clicks on the console log didn't work.

2007-10-31  Satoshi Nakagawa <artension@gmail.com>

	Added cmd+alt+(up|down) as shortcut keys for moving channels.

2007-10-31  Satoshi Nakagawa <artension@gmail.com>

	Changed shortcut keys for moving servers from cmd+(left|right) to cmd+alt+(left|right).

2007-10-31  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, location of the caret is out of range after pushed up and down keys on the edit.
	Changed regex patterns for URLs and addresses.