@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{499, 78}, {836, 949}}</string>
+	<string>{{580, 89}, {980, 1083}}</string>
 </dict>
 </plist>
